# mcu-rust-vscode-template

./: .gitignore  Cargo.toml  Embed.toml  README.md  cargo-generate.toml  project-README.md  rename.rhai  rust-toolchain.toml
.cargo/: config.toml
