[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{description}}"
authors = ["{{authors}}"]
# Change categories to suit your needs - https://crates.io/category_slugs
categories = ["embedded", "hardware-support", "no-std", "no-std::no-alloc"]
readme = "README.md"
license = "BlueOak-1.0.0"
license-file = "LICENSE.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
defmt-rtt = "0.4.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
panic-halt = "0.2.0"
stm32ral = { version = "0.8.0", features = ["<<enter your stm chip id>>", "rt"] }

# See also https://github.com/taurr/template-template-rs/blob/main/template/Cargo.toml for an idea
# how to list most commonly used crates as dependencies.

[profile.dev]
codegen-units = 1
debug = true
incremental = false
lto = false # faster

[profile.release]
opt-level = 'z' # optimize for space and speed
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
incremental = false # better optimizations
lto = true # better optimizations
